<resources>
    <string name="app_name">Calculator</string>
    <string name="amount">Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="nosvs">NO SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">Paynow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="total">Total Bill:</string>
    <string name="eachpay">Each Pays:</string>
    <string name="pay">Payment</string>

</resources>