<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="amount"
                android:inputType="numberDecimal"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pax"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/pax"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="pax"
                android:inputType="numberDecimal"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/nosvs"
                android:textOff="@string/nosvs"
                android:textOn="@string/nosvs"></ToggleButton>

            <ToggleButton
                android:id="@+id/toggle2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/gst"
                android:textOff="@string/gst"
                android:textOn="@string/gst"></ToggleButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/discount"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="discount"
                android:inputType="number"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay"

                android:textSize="25dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RD1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/cash" />

                <RadioButton
                    android:id="@+id/RD2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paynow" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggle3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/split"
                android:textOff="@string/split"
                android:textOn="@string/split"></ToggleButton>

            <ToggleButton
                android:id="@+id/toggle4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/reset"
                android:textOff="@string/reset"
                android:textOn="@string/reset"></ToggleButton>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/totalbill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="20dp"></TextView>

            <TextView
                android:id="@+id/eachpays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eachpay"
                android:textSize="20dp"></TextView>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>